Ease other framework applications generation (#1840)